css/custom.css
/* ... */
.no-event-message {
  font-size: 30px;
  line-height: 45px;
}

#date-picker,
.hasDatepicker {
  width: 100px;
  min-width: unset;
  border: none;
  color: #030e14;
  font-size: 15rem;
  line-height: 25rem;
  letter-spacing: 0.05em;
  text-decoration: none;
  text-transform: uppercase;
}

.event-avatar > img {
  height: 100%;
  object-fit: cover;
}

#date-picker::placeholder,
.hasDatepicker::placeholder {
  color: #030e14;
}

.calendar-btn:hover #date-picker::placeholder,
.calendar-btn:hover .hasDatepicker::placeholder {
  color: #dcca99;
}

[type='checkbox']:checked + span,
[type='radio']:checked + span {
  border-color: rgba(3, 14, 20, 0.1);
  background: #f1ead6;
}

.slider-wvwnts {
  width: 100%;
}

.wo-slider {
  position: relative;
  width: 100%;
  z-index: 10;
}

.wo-slide {
  padding-right: 20rem;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  user-select: none;
}

.wo-slide img {
  user-select: none;
  -webkit-user-select: none;
  -webkit-user-drag: none;
}

.wo-slider--ready .wo-slide {
  transition: all 0.2s ease-in-out;
}

.wo-slider--dragging .wo-slide {
  transition: none;
  touch-action: none;
}

.account {
  position: fixed;
  right: 20px;
  bottom: 20px;
  width: 50px;
  height: 50px;
  border-radius: 50%;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: #fff;
  z-index: 9;
  -webkit-box-shadow: 0px 0px 50px -17px rgba(0, 0, 0, 0.55);
  -moz-box-shadow: 0px 0px 50px -17px rgba(0, 0, 0, 0.55);
  box-shadow: 0px 0px 50px -17px rgba(0, 0, 0, 0.55);
}

.cart__counter {
  position: absolute;
  top: 0;
  right: 0;
  padding: 2px 6px;
  height: 20px;
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 50%;
  transform: translate(50%, -50%);
  line-height: 1;
  background-color: #030e14;
  color: #fff;
}

.account__actions {
  display: none;
  position: absolute;
  bottom: 0;
  left: 0;
  padding: 10px;
  transform: translateX(-105%);
  background-color: #dcca99;
  color: #030e14;
}

.account__actions::after {
  content: '';
  width: 6px;
  height: 6px;
  background-color: #dcca99;
  position: absolute;
  bottom: 50%;
  right: 0;
  transform: translate(50%, 50%) rotate(45deg);
  z-index: -1;
}

.account--open .account__actions {
  display: block;
}

.account__link {
  white-space: nowrap;
  color: #030e14;
  text-decoration: none;
}

.wo-calendar {
  width: 100%;
}

.wo-calendar__header {
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.wo-calendar__button {
  width: 38px;
  height: 38px;
  border: 1px solid #34343b;
  border-radius: 50%;
  background-color: transparent;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 20rem;
  transition: all 0.2s ease-in-out;
}

.wo-calendar__button:hover,
.wo-calendar__button:focus {
  border: 1px solid #fff;
}

.wo-calendar__month {
  font-weight: 400;
  font-size: 20rem;
  line-height: 3;
}

.wo-calendar__body {
  width: 100%;
  display: grid;
  grid-template-columns: repeat(7, 38rem);
  grid-gap: 2rem;
}

.wo-day {
  position: relative;
  width: 38rem;
  height: 38rem;
  display: flex;
  justify-content: center;
  align-items: center;
}

.wo-day--today::after {
  content: '';
  position: absolute;
  background: #dcca99;
  border-radius: 100%;
  width: 6rem;
  height: 6rem;
  pointer-events: none;
  bottom: 4rem;
  transition: all 300ms ease;
}

.wo-day__label {
  width: 100%;
  height: 100%;
  border-radius: 50%;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 20rem;
  color: #fff;
  transition: all 0.2s ease-in-out;
}

.wo-day__label:hover,
.wo-day__label:focus {
  background-color: #34343b;
}

.visually-hidden {
  clip: rect(0 0 0 0);
  clip-path: inset(50%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.wo-day--selected .wo-day__label {
  background-color: #dcca99;
  color: #030e14;
}

.wo-calendar--light .wo-day__label {
  font-weight: 400;
  color: #030e14;
}

.wo-calendar--light .wo-day__label:hover,
.wo-calendar--light .wo-day__label:focus {
  background-color: rgba(220, 202, 153, 0.2);
}

.wo-calendar--light .wo-calendar__button:hover,
.wo-calendar--light .wo-calendar__button:focus {
  border: 1px solid #dcca99;
  color: #dcca99;
}

.filter-calendar {
  display: none;
  padding: 33px 63px;
  position: absolute;
  right: 0;
  top: 100%;
  border: 1px solid #dddeda;
  border-radius: 5px;
  background-color: #fff;
  transform: translate3d(0, 10px, 0);
  z-index: 9;
}

.calendar-btn__close {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  border-radius: 5rem;
  display: none;
  justify-content: center;
  align-items: center;
  font-weight: 400;
  font-size: 15rem;
  line-height: 25rem;
  letter-spacing: 0.05em;
  text-transform: uppercase;
  color: #030e14;
  background-color: #fff;
  z-index: 100;
}

.calendar-btn--active .filter-calendar {
  display: block;
}

.calendar-btn--active .calendar-btn__close {
  display: flex;
}

.calendar-btn__input {
  width: 100px;
  border: none;
  font-weight: 400;
  font-size: 15rem;
  line-height: 25rem;
  letter-spacing: 0.05em;
  text-transform: uppercase;
  color: #030e14;
  pointer-events: none;
}

.calendar-btn__input::placeholder {
  color: #030e14;
}

.calendar-btn:hover .calendar-btn__input,
.calendar-btn:hover .calendar-btn__input::placeholder,
.calendar-btn:hover .calendar-btn__close {
  color: #dcca99;
}

.calendar-btn__reset {
  display: none;
  padding-right: 15.5rem;
  padding-left: 15.5rem;
  position: absolute;
  top: 0;
  right: 0;
  height: 100%;
  background-color: transparent;
  z-index: 10;
}

.calendar-btn--selected .calendar-btn__reset {
  display: inline-block;
}

@media screen and (min-width: 1920px) {
  .cms-li_content .booktickets-btn,
  .cms-li_content .cms-li_price {
    display: none;
  }

  .event-row_right-col > * {
    max-width: 755rem;
    margin-left: auto;
    margin-right: auto;
  }
}
/* ... */

